--- a/rebar.config
+++ b/rebar.config
@@ -1,5 +1,7 @@
 {erl_opts, [debug_info, {i, "include"}]}.
 
+{deps, [{eqc, ".*", {git, "git://github.com/rpt/eqcmini.git"}}]}.
+
 {plugins, [
     {rebar3_eqc, ".*", {git, "https://github.com/kellymclaughlin/rebar3-eqc-plugin.git", {tag, "0.1.0"}}}
 ]}.
